syntax="proto3";

package raft;
option java_package = "ProtoBuf";
option java_outer_classname = "RaftRPC";

// Define Server for cluster configuration
message Server {
    uint32 server_id = 1;
    string host = 2;
    uint32 port = 3;
}

message Cluster {
    repeated Server servers = 1;
}

message ClientRequest {
    string command = 1;
}

message ClientReply {
    bool is_leader = 1;
    uint32 leader_id = 2;
}

// Define entity for Entity.StateMachine and appendEntriesRPC method
message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    string command = 3;
};

// Define RPC
// Voting initiated by Candidate
message VoteRequest {
    uint64 candidate_term = 1; // candidate’s term
    uint32 candidate_id = 2; // candidate requesting vote
    uint64 last_log_index = 3; // index of candidate’s last log entry
    uint64 last_log_term = 4; // term of candidate’s last log entry

};

message VoteReply {
    uint64 current_term = 1; // currentTerm, for candidate to update itself
    bool vote_granted = 2; // true means candidate received vote
};

// AppendEntries/Heartbeat initiated by Leader
message AppendEntriesRequest {
    uint64 leader_term = 1; // leader’s term
    uint32 leader_id = 2; // so follower can redirect clients
    uint64 prev_log_index = 3; // index of log entry immediately preceding new ones
    uint64 prev_log_term = 4; // term of prevLogIndex entry
    repeated LogEntry log_entries = 5; // log entries to store (empty for heartbeat may send more than one for efficiency)
    uint64 leader_commit = 6; // leader’s commitIndex
};

message AppendEntriesReply {
    uint64 current_term = 1; // currentTerm, for leader to update itself
    bool success = 2; // true if follower contained entry matching prevLogIndex and prevLogTerm
};

// Raft Services
service RaftNodeService {
    rpc RequestVoteRPC(VoteRequest) returns (VoteReply) {};
    rpc AppendEntriesRPC(AppendEntriesRequest) returns (AppendEntriesReply);
    rpc ClientRequestRPC(ClientRequest) returns (ClientReply) {}; // for remote client only
}
